week6/siyoung/board-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board
spec:
  replicas: 2
  selector:
    matchLabels:
      app: board
  template:
    metadata:
      name: board
      labels:
        app: board
    spec:
      containers:
        - image: gjwnghks99/board:1.0.3
          name: board
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: board-service
spec:
  selector:
    app: board
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
